@@ -1,5 +1,9 @@
 2008-01-16  Sam Steingold  <sds@gnu.org>
 
+	* pathname.d (open_file): fix G++ compilation
+
+2008-01-16  Sam Steingold  <sds@gnu.org>
+
 	* ariarm.d, lispbibl.d: convert comments from "# " to "/**/"
 
 2008-01-16  Sam Steingold  <sds@gnu.org>
